--- a/shapeRecognizer/Readme
+++ b/shapeRecognizer/Readme
@@ -1,9 +1,8 @@
-//
-//  Readme provides instructions for running shapeRecognizer and indicates code reuse that is part of my program.
-//
-//  Created by Stephen Dyksen (srd22) for CS Final Project
-//  May 8, 2013
-//
+Created by Stephen Dyksen (srd22) Artificial Intelligence
+
+May 8, 2013
+
+shapeRecognizer is an iPhone application that allows a user to take a photo using their phone of a shape. After satisfied with the picture, the user can then press analyze and the application will tell the user if the shape in the picture looks most like a triangle, a circle, or a square.
 
 The shapeRecognizer folder contains all the files required for running shapeRecognizer.xcodeproj.  Note, shapeRecognizer.xcodeproj should be opened and the program can be run via the iPhone simulator.  Most of the files within the shapeRecognizer folder were automatically created by Xcode.  Those that were extensively edited include shapeRecognizerViewController.h/m as well as shapeAnalysis.h/m and MainStoryboard.storyboard found in the en.lproj folder.
 
